react页面内嵌入微信扫码登录

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Dva Demo</title>
   <link rel="stylesheet" href="index.css" />
 </head>
+<script src="http://res.wx.qq.com/connect/zh_CN/htmledition/js/wxLogin.js"></script>
 <body>
 
   <div id="root"></div>
